--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,12 @@
 destination: ./_site
-auto:        false
-lsi:         false
+auto: false
+lsi: true
 server_port: 4000
-pygments:    true
-markdown:    maruku
-permalink:   date
-maruku:
-  use_tex:    false
-  use_divs:   false
-  png_dir:    images/
-  png_url:    /images/
-  toc:        true
-exclude:    readme.md
+pygments: true
+markdown: rdiscount
+permalink: date
+exclude: readme.md
 cobbler:
-    version:    2.2.3-1
-    released:   2012-06-07
-    versions:   [2.2.3-1]
+    version: 2.2.3-1
+    released: 2012-06-07
+    versions: [2.2.3-1]
