Fixing up plugins and configs for dynamic pages due to 1.0 upgrade

--- a/_dynamic/_config.yml
+++ b/_dynamic/_config.yml
@@ -1,9 +1,6 @@
 destination: ./_site
-auto: false
 lsi: false
-server_port: 4000
 pygments: true
 markdown: rdiscount
-permalink: date
 paginate: 5
-
+paginate_path: '/posts/page:num'
