--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ markdown: rdiscount
 permalink: date
 exclude: ['readme.md','test.idx']
 cobbler:
-    version: 2.4.0-1
-    released: 2012-06-20
-    versions: [2.4.0-1]
+    version: 2.4.1
+    released: 2014-02-03
+    versions: [2.4.1]
