--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
-destination: ./_site
+title: Cobbler
+description: Officaial website for the Cobbler-Project.
+url: "https://cobbler.github.io"
 lsi: false
 highlighter: rouge
 markdown: rdiscount
 permalink: date
-exclude: ['readme.md','test.idx']
+exclude: ['README.md', 'Dockerfile', 'Gemfile', 'Gemfile.lock', 'dockerfiles']
 cobbler:
-    version: 2.8.4
-    released: 2018-11-23
-    versions: [2.8.4]
+  version: 2.8.4
+  released: 2018-11-23
+  versions: [2.8.4]
