--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ markdown: rdiscount
 permalink: date
 paginate: 5
 paginate_path: "/blog/page:num/"
-exclude: ['README.md', 'Dockerfile', 'Gemfile', 'Gemfile.lock', 'dockerfiles', '_site']
+exclude: ['README.md', 'Dockerfile', 'Gemfile', 'Gemfile.lock', 'dockerfiles', '_site', '.idea']
 plugins:
   - jekyll-coffeescript
   - jekyll-gist
