Adjust permalink for blog posts to have them under /blog
Other pages need to overwrite the permalink to not find them under /blog/...

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ url: "https://cobbler.github.io"
 lsi: false
 highlighter: rouge
 markdown: rdiscount
-permalink: date
+permalink: "/blog/:year/:month/:day/:title.html"
 paginate: 5
-paginate_path: "/blog/page:num/"
+paginate_path: "/blog/:num/"
 exclude: ['README.md', 'Dockerfile', 'Gemfile', 'Gemfile.lock', 'dockerfiles', '_site', '.idea']
 plugins:
   - jekyll-coffeescript
