--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ markdown: kramdown
 permalink: "/blog/:year/:month/:day/:title.html"
 paginate: 5
 paginate_path: "/blog/:num/"
-exclude: ['README.md', 'Dockerfile', 'Gemfile', 'Gemfile.lock', 'dockerfiles', '_site', '.idea']
+exclude: ['README.md', 'Dockerfile', 'Gemfile', 'Gemfile.lock', 'dockerfiles', '_site', '.idea', 'vendor']
 plugins:
   - jekyll-coffeescript
   - jekyll-gist
