--- a/_data/users.yml
+++ b/_data/users.yml
@@ -1,19 +1,19 @@
 - img: acision
-  url: http://www.acision.com
+  url: https://mavenir.com/
 - img: alstom
-  url: http://www.alstom.com/
+  url: https://www.alstom.com/
 - img: beantown
   url: http://beantownhost.com
 - img: carol
-  url: http://www.carol.com/
+  url: https://www.totvs.com/inteligencia-artificial/
 - img: dell
-  url: http://www.dell.com
+  url: https://www.dell.com
 - img: eucalyptus
   url: http://www.eucalyptus.com/
 - img: fedora
-  url: http://www.fedoraproject.org/
+  url: https://getfedora.org/
 - img: flpc
-  url: http://www.uclug.org/flpc
+  url: https://www.uclug.org/
 - img: kynetx
   url: http://www.kynetx.com
 - img: linkshare
@@ -21,35 +21,35 @@
 - img: mi
   url: http://www.mcclatchyinteractive.com/
 - img: ohio
-  url: http://www.ohio.edu
+  url: https://www.ohio.edu/
 - img: ouit
-  url: http://www.ou.edu/ouit
+  url: https://www.ou.edu/ouit
 - img: pnnl
-  url: http://pnl.gov
+  url: https://www.pnnl.gov/
 - img: puzzleitc
-  url: http://puzzle.ch
+  url: https://www.puzzle.ch
 - img: quantcast
   url: http://www.quantcast.com/
 - img: speakeasy
   url: http://speakeasy.net
 - img: spi
-  url: http://imageworks.com/
+  url: https://imageworks.com/
 - img: spilgames
   url: http://spil.com/cobbler
 - img: stoneit
   url: http://www.stone-it.com
 - img: sulair
-  url: http://library.stanford.edu
+  url: https://library.stanford.edu/
 - img: sunypotsdam
-  url: http://www.potsdam.edu
+  url: https://www.potsdam.edu/
 - img: tomtom
-  url: http://www.tomtom.com
+  url: https://www.tomtom.com
 - img: tripleit
-  url: http://www.triple-it.nl/
+  url: https://www.wearetriple.com/
 - img: widexs
   url: http://www.widexs.nl
 - img: inventx
-  url: http://www.inventx.ch
+  url: https://www.inventx.ch
 - img: dw
   url: http://dashwire.com
 - img: spindle
