Update Users and Projects

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,5 +12,5 @@
   url: https://spacewalkproject.github.io/
 - img: symbolic
   url: http://www.opensymbolic.org
-- img: suse
-  url: https://www.suse.com/de-de/products/suse-manager/
+- img: uyuni
+  url: https://www.uyuni-project.org/
