--- a/_data/users.yml
+++ b/_data/users.yml
@@ -50,7 +50,7 @@
   url: http://www.widexs.nl
 - img: inventx
   url: https://www.inventx.ch
-- img: dw
-  url: http://dashwire.com
 - img: spindle
   url: https://wearespindle.com/
+- img: suse
+  url: https://www.suse.com/de-de/products/suse-manager/
