--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,19 @@
 name: build
+
 on: pull_request
+
+permissions:
+  contents: read
+
 jobs:
   jekyll:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # Use GitHub Actions' cache to shorten build times and decrease load on servers
-      - uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      # Standard usage
-      - uses: lemonarc/jekyll-action@1.0.0
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        # https://github.com/actions/configure-pages
+        uses: actions/configure-pages@v5
+      - name: Build
+        # https://github.com/actions/jekyll-build-pages
+        uses: actions/jekyll-build-pages@v1
